feat: update to version 1.6.5, implement tab-list ping simulation and PvE attack automation, restructure permission system, and rename skin mode values